# virtex

./: Cargo.toml
examples/: cloth.rs  svg.rs
resources/shaders/gl3/: cloth.fs.glsl  cloth.vs.glsl  cloth_debug_lut.fs.glsl  cloth_fixup.fs.glsl  cloth_render.fs.glsl  cloth_render.vs.glsl  cloth_update.fs.glsl  cloth_update.vs.glsl  prepare_advanced.fs.glsl  render.fs.glsl  render.vs.glsl  render_advanced.fs.glsl  render_advanced.vs.glsl  render_simple.fs.glsl  render_simple.vs.glsl
src/: lib.rs  manager.rs  manager2d.rs  renderer_advanced.rs  renderer_simple.rs  stack.rs  svg.rs  tests.rs  texture.rs
