[package]
name = "virtex"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[dependencies]
arrayvec = "0.5"
log = "0.4"
rand = "0.7"

[dependencies.pathfinder_content]
path = "../pathfinder/content"

[dependencies.pathfinder_geometry]
path = "../pathfinder/geometry"

[dependencies.pathfinder_gpu]
path = "../pathfinder/gpu"

[dependencies.pathfinder_simd]
path = "../pathfinder/simd"

[dev-dependencies]
env_logger = "0.7"
gl = "0.6"

[dev-dependencies.pathfinder_gl]
path = "../pathfinder/gl"

[dev-dependencies.raqote]
version = "0.6"

[dev-dependencies.resvg]
version = "0.8"
features = ["raqote-backend"]

[dev-dependencies.surfman]
path = "../surfman/surfman"

[dev-dependencies.winit]
version = "<0.19.4" # 0.19.4 causes build errors https://github.com/rust-windowing/winit/pull/1105
